--- a/TODO.ME
+++ b/TODO.ME
@@ -7,5 +7,5 @@ TUI APP:
 - [x] Change the github cloning and use zinit for zsh -> changed the .zshrc config
 - [x] Modify the TUI app so it can remove the dotfiles forom .config first and then run stow
 - [] Fix the bug where i first lunched the app, it asked me to install something but it was messy
-- [] Add a functionality that copy the backgrounds to the right theme with dotfiles (for example ghostty.jsonc, code.jsonc ....)
+- [] Add a functionality that copy the backgrounds or theme to the right theme with dotfiles (for example ghostty.jsonc, code.jsonc ....)
 - [] Change the packages to the one that i actually need instead of the placeholders
