Mark idle status toggle and theme switch as completed in TODO list

--- a/TODO.ME
+++ b/TODO.ME
@@ -1,6 +1,7 @@
 # TODO List:
 WAYBAR:
-- [] Add toggle in waybar to change the idle status (activate or deactivate idle)
+- [x] Add toggle in waybar to change the idle status (activate or deactivate idle)
+- [x] Add toggle to change between dark and light theme
 - [] Fix the transparent background when you hover over one of the modules
 
 TUI APP:
