--- a/TODO.ME
+++ b/TODO.ME
@@ -2,7 +2,7 @@
 WAYBAR:
 - [x] Add toggle in waybar to change the idle status (activate or deactivate idle)
 - [x] Add toggle to change between dark and light theme
-- [] Fix the transparent background when you hover over one of the modules
+- [x] Fix the transparent background when you hover over one of the modules
 
 TUI APP:
 - [x] Change the github cloning and use zinit for zsh -> changed the .zshrc config
