--- a/TODO.ME
+++ b/TODO.ME
@@ -10,3 +10,13 @@ TUI APP:
 - [x] Add a functionality that copy the backgrounds or theme to the right theme with dotfiles (for example ghostty.jsonc, code.jsonc ....) -> copy all the folders fro `dotfiles/themes`
 - [] Fix the bug where i first lunched the app, it asked me to install something but it was messy
 - [] Change the packages to the one that i actually need instead of the placeholders
+- [] Remove the github cloning
+
+NVIM:
+- [x] Fix theme (dark/light) when switching the system theme
+- [] Update nvim config (probably)
+
+ENV-SCRIPT/TUI/CLI?:
+- [] Create a script to automatically create an env using UV with the option to put the name of the env
+- [] Have multiple options like AI packages, web dev packages, etc ...
+- []
