Add task to fix text color in notification system

--- a/TODO.ME
+++ b/TODO.ME
@@ -20,3 +20,6 @@ ENV-SCRIPT/TUI/CLI?:
 - [] Create a script to automatically create an env using UV with the option to put the name of the env
 - [] Have multiple options like AI packages, web dev packages, etc ...
 - []
+
+NOTIFICATION SYS:
+- [] Fix the text color
