Update TODO list: mark completed tasks and adjust NVIM config status

--- a/TODO.ME
+++ b/TODO.ME
@@ -8,13 +8,13 @@ TUI APP:
 - [x] Change the github cloning and use zinit for zsh -> changed the .zshrc config
 - [x] Modify the TUI app so it can remove the dotfiles forom .config first and then run stow
 - [x] Add a functionality that copy the backgrounds or theme to the right theme with dotfiles (for example ghostty.jsonc, code.jsonc ....) -> copy all the folders fro `dotfiles/themes`
-- [] Fix the bug where i first lunched the app, it asked me to install something but it was messy
-- [] Change the packages to the one that i actually need instead of the placeholders
+- [x] Fix the bug where i first lunched the app, it asked me to install something but it was messy
+- [x] Change the packages to the one that i actually need instead of the placeholders
 - [] Remove the github cloning
 
 NVIM:
 - [x] Fix theme (dark/light) when switching the system theme
-- [] Update nvim config (probably)
+- [x] Update nvim config (probably)
 
 ENV-SCRIPT/TUI/CLI?:
 - [] Create a script to automatically create an env using UV with the option to put the name of the env
@@ -22,4 +22,4 @@ ENV-SCRIPT/TUI/CLI?:
 - []
 
 NOTIFICATION SYS:
-- [] Fix the text color
+- [x] Fix the text color
